changes done postman working fine now